Fix: Formatting change in ipynb dashboard export

--- a/notebooks/notebook01.ipynb
+++ b/notebooks/notebook01.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1331,7 @@
          }
         },
         "title": {
-         "text": "<b>1) Performance vs Trafic : Identification des Magasins Critiques</b>"
+         "text": "<b> Performance vs Trafic : Identification des Magasins Critiques</b>"
         },
         "xaxis": {
          "anchor": "y",
@@ -1373,7 +1373,7 @@
     "        \"Standard\": \"#F4B400\",\n",
     "        \"Alerte (Sous-performance)\": \"#DB4437\",\n",
     "    },\n",
-    "    title=\"<b>1) Performance vs Trafic : Identification des Magasins Critiques</b>\",\n",
+    "    title=\"<b> Performance vs Trafic : Identification des Magasins Critiques</b>\",\n",
     "    labels={\n",
     "        \"avg_transactions\": \"Transactions Moyennes / Jour\",\n",
     "        \"avg_daily_sales\": \"Ventes Moyennes (Unités) / Jour\",\n",
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1503,7 +1503,7 @@
        "4          5  1.556692e+07       2347877    D                   Standard  Santo Domingo   9.404979    2.208173e+07       6.514817e+06"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2622,7 +2622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2638,7 +2638,7 @@
          "legendgroup": "",
          "marker": {
           "color": {
-           "bdata": "WxKF3NxFwz+19HgQrZjJPxlbbEMpNQJApp2gPXUxCEA=",
+           "bdata": "ZBKF3NxFwz/D9HgQrZjJPx9bbEMpNQJAp52gPXUxCEA=",
            "dtype": "f8"
           },
           "coloraxis": "coloraxis",
@@ -2662,7 +2662,7 @@
          "type": "bar",
          "width": 0.7,
          "x": {
-          "bdata": "WxKF3NxFwz+19HgQrZjJPxlbbEMpNQJApp2gPXUxCEA=",
+          "bdata": "ZBKF3NxFwz/D9HgQrZjJPx9bbEMpNQJAp52gPXUxCEA=",
           "dtype": "f8"
          },
          "xaxis": "x",
@@ -3542,7 +3542,7 @@
          }
         },
         "title": {
-         "text": "<b>4) Diagnostic Mix Produit (Top Opportunités)</b><br><sup>Catégories avec un déficit significatif par rapport aux Leaders (Pondéré)</sup>"
+         "text": "<b> Diagnostic Mix Produit (Top Opportunités)</b><br><sup>Catégories avec un déficit significatif par rapport aux Leaders (Pondéré)</sup>"
         },
         "width": 1050,
         "xaxis": {
@@ -3680,7 +3680,7 @@
     "        color_continuous_scale=\"Reds\",\n",
     "        text=mix_data[\"weighted_gap_pp\"].map(lambda v: f\"+{v:.2f} pp\"),\n",
     "        title=(\n",
-    "            \"<b>4) Diagnostic Mix Produit (Top Opportunités)</b>\"\n",
+    "            \"<b> Diagnostic Mix Produit (Top Opportunités)</b>\"\n",
     "            \"<br><sup>Catégories avec un déficit significatif par rapport aux Leaders (Pondéré)</sup>\"\n",
     "        ),\n",
     "    )\n",
@@ -3731,7 +3731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4638,7 +4638,7 @@
          }
         },
         "title": {
-         "text": "<b>5) Plan d'Action : Priorisation (Pareto)</b><br><sup>Focalisation sur le Top 6 magasins. Benchmark ajusté par format.</sup>"
+         "text": "<b> Plan d'Action : Priorisation (Pareto)</b><br><sup>Focalisation sur le Top 6 magasins. Benchmark ajusté par format.</sup>"
         },
         "width": 1000,
         "xaxis": {
@@ -4776,7 +4776,7 @@
     "        width=1000,\n",
     "        margin=dict(l=60, r=60, t=100, b=100),\n",
     "        title=(\n",
-    "            \"<b>5) Plan d'Action : Priorisation (Pareto)</b>\"\n",
+    "            \"<b> Plan d'Action : Priorisation (Pareto)</b>\"\n",
     "            \"<br><sup>Focalisation sur le Top 6 magasins. Benchmark ajusté par format.</sup>\"\n",
     "        ),\n",
     "        xaxis=dict(title=\"\", tickangle=0, automargin=True, type=\"category\"),\n",
@@ -4818,9 +4818,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fig2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 99\u001b[39m\n\u001b[32m      4\u001b[39m html_template = \u001b[33m\"\"\"\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[33m<!DOCTYPE html>\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[33m<html lang=\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mfr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m>\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     95\u001b[39m \u001b[33m</html>\u001b[39m\n\u001b[32m     96\u001b[39m \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     98\u001b[39m \u001b[38;5;66;03m# Make the figures fluid inside the HTML layout\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m99\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m fig \u001b[38;5;129;01min\u001b[39;00m [fig1, \u001b[43mfig2\u001b[49m, fig4, fig5]:\n\u001b[32m    100\u001b[39m     fig.update_layout(\n\u001b[32m    101\u001b[39m         width=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    102\u001b[39m         height=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m   (...)\u001b[39m\u001b[32m    106\u001b[39m         plot_bgcolor=\u001b[33m\"\u001b[39m\u001b[33mrgba(0,0,0,0)\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    107\u001b[39m     )\n\u001b[32m    109\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mExporting responsive dashboard...\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'fig2' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# -------------------------\n",
     "# Responsive HTML template\n",
