Fix: Formatting change in ipynb dashboard export

--- a/notebooks/notebook01.ipynb
+++ b/notebooks/notebook01.ipynb
@@ -4818,18 +4818,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'fig2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 99\u001b[39m\n\u001b[32m      4\u001b[39m html_template = \u001b[33m\"\"\"\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[33m<!DOCTYPE html>\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[33m<html lang=\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mfr\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m>\u001b[39m\n\u001b[32m   (...)\u001b[39m\u001b[32m     95\u001b[39m \u001b[33m</html>\u001b[39m\n\u001b[32m     96\u001b[39m \u001b[33m\"\"\"\u001b[39m\n\u001b[32m     98\u001b[39m \u001b[38;5;66;03m# Make the figures fluid inside the HTML layout\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m99\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m fig \u001b[38;5;129;01min\u001b[39;00m [fig1, \u001b[43mfig2\u001b[49m, fig4, fig5]:\n\u001b[32m    100\u001b[39m     fig.update_layout(\n\u001b[32m    101\u001b[39m         width=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    102\u001b[39m         height=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m   (...)\u001b[39m\u001b[32m    106\u001b[39m         plot_bgcolor=\u001b[33m\"\u001b[39m\u001b[33mrgba(0,0,0,0)\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m    107\u001b[39m     )\n\u001b[32m    109\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mExporting responsive dashboard...\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'fig2' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exporting responsive dashboard...\n",
+      "✅ Dashboard saved: ..\\reports\\dashboard_retail.html\n"
      ]
     }
    ],
